registrieren und login angepasst

--- a/HTML Codes/index.html
+++ b/HTML Codes/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <p style="text-align: center">
-    <button><a href="Login.html">Login</a></button><br>
-    <button><a href="Registrieren.html">Registrieren</a></button>
+    <button><a href="login.html">Login</a></button><br>
+    <button><a href="registrieren.html">Registrieren</a></button>
 </p>
 </body>
 </html>
