--- a/HTML Codes/login.html
+++ b/HTML Codes/login.html
@@ -2,32 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login/Registration</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../CSS%20Codes/login.css">
 </head>
 <body>
-<form action="">
-    <div class="container">
-        <h1>Registrierung</h1>
-        <p>Bitte die Felder ausfüllen um einen Account zu erstellen</p>
-        <hr>
+<form action="action_page.php" method="post">
+    <div class="imgcontainer">
+        <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    </div>
 
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
+    <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
 
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-        <hr>
-
-        <p>Durch erstellen des Accounts stimmen sie unseren <a href="#">AGBs</a> zu.</p>
-        <button type="submit" class="registerbtn">Registrieren</button>
+        <button type="submit">Login</button>
+        <label>
+            <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
     </div>
 
-    <div class="container signin">
-        <p>Du hast schon einen Account? <a href="#">Login</a>.</p>
+    <div class="container" style="background-color:#f1f1f1">
+        <button type="button" class="cancelbtn">Cancel</button>
+        <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
 </form>
 </body>
