registrieren und login angepasst

--- a/HTML Codes/registrieren.html
+++ b/HTML Codes/registrieren.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="container signin">
-        <p>Du hast schon einen Account? <a href="#">Login</a>.</p>
+        <p>Du hast schon einen Account? <a href="login.html">Login</a>.</p>
     </div>
 </form>
 </body>
