--- a/HTML Codes/AboBearbeiten.html
+++ b/HTML Codes/AboBearbeiten.html
@@ -7,9 +7,9 @@
 <body>
 <fieldset>
     <h1>Abo bearbeiten <br></h1>
-    Anbieter<br>
+    Anbieter auswählen<br>
     <select name="cars">
-        <option value="neflix">Neflix</option>
+        <option value="netflix">Neflix</option>
         <option value="amazon">Amazon</option>
         <option value="disney+">Disney+</option>
         <option value="Anderer">Anderer</option>
