--- a/HTML Codes/AboBearbeiten.html
+++ b/HTML Codes/AboBearbeiten.html
@@ -9,7 +9,7 @@
     <h1>Abo bearbeiten <br></h1>
     Anbieter auswählen<br>
     <select name="cars">
-        <option value="netflix">Neflix</option>
+        <option value="netflix">Netflix</option>
         <option value="amazon">Amazon</option>
         <option value="disney+">Disney+</option>
         <option value="Anderer">Anderer</option>
@@ -30,7 +30,7 @@
     <input type="number" value="1" name="bentzer" min="1" max="4"><br><br>
     Kündigungsfrist<br>
     <input type="number" name="kündigungsfrist" value="4" min="0" step="1"> Wochen<br><br>
-    <input type="submit" value="Speichern">
+    <input type="submit" value="Speichern"><br><br>
     <input type="reset" value="Abbrechen">
 </fieldset>
 
